# autogoal-remote

./: pyproject.toml
autogoal_remote/: cli.py
autogoal_remote/distributed/: client.py  proxy.py  remote_algorithm.py  server.py  utils.py
autogoal_remote/distributed/config/: __init__.py
