[tool.poetry]
name = "autogoal_remote"
version = "0.2.0"
description = "Distributed AutoML for AutoGOAL"
authors = ["Suilan Estevez-Velarde <suilanestevez@gmail.com>", "Alejandro Piad-Morffis <apiad@apiad.net>", "Ernesto L. Estevanell-Valladares <ernestoestevanellv@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://autogoal.github.io"
documentation = "https://autogoal.github.io"
repository = "https://github.com/autogoal/autogoal-remote"
packages = [{include = "autogoal_remote"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.95.0"
websockets = "^11.0.3"
dill = "^0.3.6"
yamlable = "^1.1.1"
requests = "^2.28.2"
uvicorn = "^0.21.1"
kade-drive = "^0.7.0"
typer = "^0.9.0"
rich = "^13.4.2"
message-system = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
